Push project to GitHub